apps/demo/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: demo-app
  namespace: demo
spec:
  replicas: 10
  revisionHistoryLimit: 2
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: demo-app
    scaleDown: onsuccess
  # strategy:
  #   blueGreen:
  #     activeService: demo-stable
  #     previewService: demo-canary
  #     autoPromotionEnabled: false
  #     scaleDownDelaySeconds: 30

  # strategy:
  #   canary:
  #     stableService: demo-stable
  #     canaryService: demo-canary
  #     scaleDownDelaySeconds: 30
  #     trafficRouting:
  #       plugins:
  #         argoproj-labs/gatewayAPI:
  #           httpRoute: demo-route
  #           namespace: demo
  #     steps:
  #       - setWeight: 10
  #       - pause: {duration: 20s}
  #       - setWeight: 25
  #       - pause: {}
  #       - setWeight: 50
  #       - pause: {}
  #       - setWeight: 100
  #       - pause: {}

  strategy:
    canary:
      stableService: demo-stable
      canaryService: demo-canary
      dynamicStableScale: true
      scaleDownDelaySeconds: 30
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: demo-route
            namespace: demo
      steps:
        - setWeight: 10
        - pause: {duration: 20s}
        - setWeight: 25
        - pause: {duration: 20s}
        - analysis:
            templates:
              - templateName: demo-success-rate
        - setWeight: 50
        - pause: {duration: 10s}
        - setWeight: 100
        - pause: {duration: 10s}
