apps/demo/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-stable
  namespace: demo
  labels:
    app: demo-app
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: demo-app
---
apiVersion: v1
kind: Service
metadata:
  name: demo-canary
  namespace: demo
  labels:
    app: demo-app
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: demo-app
---
apiVersion: v1
kind: Service
metadata:
  name: demo-metrics
  namespace: demo
  labels:
    app: demo-app
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: demo-app
