apps/demo/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-route
  namespace: demo
spec:
  parentRefs:
    - name: demo-gateway
  hostnames:
    - demo.example.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-stable
          kind: Service
          port: 80
          weight: 100
        - name: demo-canary
          kind: Service
          port: 80
          weight: 0
